[gd_scene load_steps=19 format=3 uid="uid://b5n0n5cillp8g"]

[ext_resource type="Script" path="res://entities/squid/squid.gd" id="1_tps31"]
[ext_resource type="PackedScene" uid="uid://ciqtf1jnwwain" path="res://entities/ink/bubble/ink.tscn" id="2_q1qh2"]
[ext_resource type="Texture2D" uid="uid://br3ibb4o00xj" path="res://entities/squid/squid_highres_one.png" id="3_dho5f"]
[ext_resource type="Texture2D" uid="uid://cen6plqxwcunp" path="res://entities/squid/squid_highres_two.png" id="4_kbbcr"]
[ext_resource type="PackedScene" uid="uid://7rox1r8mmpri" path="res://entities/squid/2D_player_camera.tscn" id="5_2qcwv"]
[ext_resource type="Texture2D" uid="uid://bhru5w0qwfl0m" path="res://entities/squid/aim_one.png" id="6_cxt3x"]
[ext_resource type="Texture2D" uid="uid://di57wewnh5x5y" path="res://entities/squid/aim_two.png" id="7_cyo64"]
[ext_resource type="AudioStream" uid="uid://ce6xsgjdkpp1k" path="res://entities/squid/pop.wav" id="8_8nwac"]
[ext_resource type="AudioStream" uid="uid://b5h8hl17iym02" path="res://entities/squid/windwhistling.wav" id="9_qbais"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xekxg"]
radius = 54.037

[sub_resource type="Gradient" id="Gradient_efyr4"]
offsets = PackedFloat32Array(0.585413, 0.591171)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2bfi3"]
gradient = SubResource("Gradient_efyr4")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_jlil8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_cnh34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dho5f")
}],
"loop": false,
"name": &"one",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_kbbcr")
}],
"loop": false,
"name": &"two",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nj2nt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_cxt3x")
}],
"loop": false,
"name": &"one",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_cyo64")
}],
"loop": false,
"name": &"two",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_x0s3e"]
length = 0.001

[sub_resource type="Animation" id="Animation_67ejk"]
resource_name = "squish"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 0.5), Vector2(0.15, 0.6), Vector2(0.6, 0.5), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5pol"]
_data = {
"RESET": SubResource("Animation_x0s3e"),
"squish": SubResource("Animation_67ejk")
}

[node name="Squid" type="RigidBody2D" groups=["player"]]
z_index = 4
lock_rotation = true
angular_damp = 50.0
script = ExtResource("1_tps31")
ink_scene = ExtResource("2_q1qh2")

[node name="Up" type="Marker2D" parent="."]
position = Vector2(2.08165e-12, -200)
gizmo_extents = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_xekxg")

[node name="AirStreams" type="Node2D" parent="."]
top_level = true

[node name="AirStream" type="CPUParticles2D" parent="AirStreams"]
z_index = 2
position = Vector2(-48, 0.999992)
amount = 100
lifetime = 0.25
texture = SubResource("GradientTexture2D_2bfi3")
direction = Vector2(2.08165e-12, 2.08165e-12)
spread = 0.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
angular_velocity_min = -10.0
angular_velocity_max = 10.0
scale_amount_curve = SubResource("Curve_jlil8")
color = Color(0.921569, 0.607843, 0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
texture_filter = 1
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_cnh34")
animation = &"one"
autoplay = "one"
frame_progress = 1.0
offset = Vector2(124.98, 7.96)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="AnimatedSprite2D"]
remote_path = NodePath("../../AirStreams")
update_scale = false

[node name="PlayerCamera" parent="." instance=ExtResource("5_2qcwv")]
position = Vector2(2.08165e-12, 2.08165e-12)
zoom = Vector2(0.4, 0.4)
position_smoothing_enabled = false

[node name="Reticle" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_nj2nt")
animation = &"one"
autoplay = "one"

[node name="Pointer" type="Marker2D" parent="Reticle"]
position = Vector2(92.093, 0)
scale = Vector2(0.465116, 0.465116)

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_8nwac")
volume_db = -8.0
pitch_scale = 0.9

[node name="WindSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_qbais")
volume_db = -5.0
pitch_scale = 0.6
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d5pol")
}
